# mocks

./: .codecov.yml  .gitignore  .mcp.json  .zshrc  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  cliff.toml  codecov.yml  docker-compose.yml  storage.json  storage.nested.json
.cargo/: config.toml
.cursor/rules/: api-design.mdc  development-workflow.mdc  mocks-architecture.mdc  rust-fundamentals.mdc  testing-strategy.mdc
.devcontainer/: devcontainer.json
.devcontainer/cspell-dict/: mocks-words.txt
.github/: dependabot.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build-release-binaries.yml  check-changelog.yml  create-release-pr.yml  create-release.yml  deploy-docs.yml  generate-changelog.yml  manual-publish-to-cratesio.yml  publish-to-cratesio-manual.yml  publish-to-cratesio.yml  publish-to-npm.yml  publish-to-npm_old.yml  publish.yml  release.yml  security-audit.yml  test-and-lint.yml  test-docs.yml  upload-coverage-to-codecov.yml
docs/: DOCUMENT.md  README.md  astro.config.mjs  package-lock.json  package.json
docs/public/: robots.txt
docs/src/layouts/: Layout.astro
docs/src/styles/: custom.css
npm-dist/mocks/: README.md  index.js  package.json
npm-dist/mocks-darwin-arm64/: package.json
npm-dist/mocks-darwin-x64/: index.js  package.json
npm-dist/mocks-linux-arm64/: index.js  package.json
npm-dist/mocks-linux-x64/: index.js  package.json
npm-dist/mocks-win32-arm64/: index.js  package.json
npm-dist/mocks-win32-x64/: index.js  package.json
npm-dist/mocks/lib/: install.js
runn-e2e/: README.md  storage.runn.json
runn-e2e/runbooks/: test.yml  test_comment.yml  test_comment_error.yml  test_nested_picture.yml  test_nested_snapshot.yml  test_nested_user.yml  test_post.yml  test_post_error.yml  test_post_filter.yml  test_profile.yml  test_profile_error.yml
scripts/: prepare-release.js  sync-versions.js
src/: console.rs  error.rs  main.rs  server.rs  storage.rs
src/server/: context.rs  get.rs  handler.rs  hc.rs  state.rs
src/server/handler/: delete.rs  get.rs  hc.rs  patch.rs  post.rs  put.rs
src/storage/: operation.rs  reader.rs  writer.rs
src/storage/operation/: insert.rs  remove.rs  (+7 more)
(+7 files in other folders)
