[package]
name = "mocks"
version = "0.3.9"
edition = "2021"
authors = ["codemountains <codemountains@gmail.com>"]
description = "Get a mock REST APIs with zero coding within seconds."
homepage = "https://github.com/mocks-rs/mocks"
repository = "https://github.com/mocks-rs/mocks"
documentation = "https://github.com/mocks-rs/mocks"
readme = "README.md"
license = "MIT"

[dependencies]
axum = "0.7.5"
clap = { version = "4.5.39", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = "symbols"
