[package]
name = "mocks"
version = "1.0.9"
edition = "2021"
authors = ["codemountains <codemountains@gmail.com>"]
description = "Mock REST APIs from JSON with zero coding within seconds."
homepage = "https://github.com/mocks-rs/mocks"
repository = "https://github.com/mocks-rs/mocks"
documentation = "https://mocks-rs.github.io/mocks"
readme = "README.md"
license = "MIT"
rust-version = "1.80.1"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.45", features = ["derive", "color"] }
colored = "3.0.0"
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"

[lints.clippy]
uninlined_format_args = "warn"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
strip = "symbols"
